generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model Employee {
  id        Int        @id @default(autoincrement())
  name      String
  rules     String
  days      Day[]
  overrides Override[]

  @@map("employee")
}

model Day {
  id         String     @id @default(uuid())
  lunch      String
  name       String
  employeeId Int?
  weekId     String
  week       Week       @relation(fields: [weekId], references: [id])
  employee   Employee?  @relation(fields: [employeeId], references: [id])
  overrides  Override[]

  @@map("day")
}

model Week {
  id     String @id @default(uuid())
  week   Int    @unique
  yearId String
  year   Year   @relation(fields: [yearId], references: [id])
  days   Day[]

  @@map("week")
}

model Year {
  id    String @id @default(cuid())
  weeks Week[]

  @@map("year")
}

model Override {
  id         String   @id @default(cuid())
  createdAt  DateTime @default(now())
  weekId     Int
  dayId      String   @unique
  employeeId Int
  employee   Employee @relation(fields: [employeeId], references: [id])
  day        Day      @relation(fields: [dayId], references: [id])

  @@map("override")
}
