//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table employee {
  id Int [pk, increment]
  name String [not null]
  rules String [not null]
  days day [not null]
  overrides override [not null]
}

Table day {
  id String [pk]
  lunch String [not null]
  name String [not null]
  employeeId Int
  weekId String [not null]
  week week [not null]
  employee employee
  overrides override [not null]
}

Table week {
  id String [pk]
  week Int [unique, not null]
  yearId String [not null]
  year year [not null]
  days day [not null]
}

Table year {
  id String [pk]
  weeks week [not null]
}

Table override {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  weekId Int [not null]
  dayId String [unique, not null]
  employeeId Int [not null]
  employee employee [not null]
  day day [not null]
}

Ref: day.weekId > week.id

Ref: day.employeeId > employee.id

Ref: week.yearId > year.id

Ref: override.employeeId > employee.id

Ref: override.dayId > day.id